devpanel/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  background-color:#4c4c4c;
}


.App{
  display: grid;
	grid-template-rows: 100px 300px auto 50px;
	grid-template-columns: 1fr;
	height: 100vh;
}

.Graph{
  display:flex;
}

.Graph .IndividualGraph{
  flex:1;
  margin: auto;
}

.Graph .IndividualGraph canvas{
  margin: auto;
}
.ConsoleMessages {
  display:flex;
  flex-direction: column;
  flex-wrap: nowrap;
}
.ConsoleMessages .ConsoleMessage-header{
  flex: 0 0 20px;
  transition: flex 200ms;
}
.ConsoleMessages .ConsoleMessage-header.ConsoleMessage-header-open{
  flex: 0 0 100px;
  background-color:#435059;
}
.ConsoleMessages .ConsoleMessage-items{
  flex:1;
  overflow: auto;
  background-color:#3e3e3e;
  color:#ffe0fd;
}
.ConsoleMessages .ConsoleMessage-items>li:hover,
.ConsoleMessages .ConsoleMessage-items>li>.active-row,
.ConsoleMessages .ConsoleMessage-items>li>.active-row>div{
  background-color: #435059;
  text-shadow: black 1px 1px 1px;
  color:white;
}
.ConsoleMessages ul.ConsoleMessage-header>li.tableheader{
  cursor: pointer;
  display:flex;
  padding:0 0 0 2px;
  color:white;
  background-color:#717171;
  text-shadow: black 1px 1px 1px;
}
.ConsoleMessages ul.ConsoleMessage-header>li.tableheader,
.ConsoleMessages ul.ConsoleMessage-header>li.tableheader div.time{
  font-size:14px;
}

.ConsoleMessages ul.ConsoleMessage-header>li.tableheader:hover{
  background-color:#435059;
}
.ConsoleMessages {
  padding:0;
  margin:0;
  text-align: left;
  background-color:#3e3e3e;
  overflow: auto;
}
.ConsoleMessages ul{
  list-style: none;
  padding:0;
  margin:0;
}
.ConsoleMessage .row{
  display:flex;
}
.ConsoleMessages ul li{
  margin-bottom: 5px;
  font-size: 12px;
  padding-left:3px;
}
.ConsoleMessages ul li .row{
  display:flex;
  cursor: pointer;
}
.ConsoleMessages ul li .row.active-row{
  border: 3px solid #ffffff;
  border-bottom: none;
}
.ConsoleMessagesLineDetails{
  padding:15px 5px 15px 5px;
  background-color: #43505a;
  box-shadow: #1a242b 0px 2px 6px;
  display:flex;
  border: 3px solid #ffffff;
  border-top: none;
}
.ConsoleMessages .ConsoleMessage-items .console-chart{
  width:500px;
}
.ConsoleMessagesLineDetails .slider{
  width:100px;
}

.ConsoleMessagesLineDetails .console-chart-and-options{
  flex: 1;
}
.ConsoleMessagesLineDetails .console-chart-options{
  line-height: 20px;
  margin: 0;
  padding: 0;
  height: 20px;
}

.ConsoleMessagesLineDetails .console-chart-listMessageComparedAgainst{
  flex: 1;
  background-color:#2b3a48;
  overflow:auto;
  margin-left:10px;
}


.ConsoleMessagesLineDetails .console-chart-listMessageComparedAgainst ul{
  padding:3px;
}

.ConsoleMessagesLineDetails .compareLine ul {
  list-style: none;
  padding:0;
  margin:0;
}

.ConsoleMessagesLineDetails .console-chart-listMessageComparedAgainst ul li.compareLine{
  overflow: hidden;
  text-overflow: ellipsis;
  height: 16px;
  word-break: break-all;
}
.ConsoleMessagesLineDetails .console-chart-listMessageComparedAgainst ul li.compareLine{
  background-color: #435059;
  margin-bottom:2px;
}
.ConsoleMessagesLineDetails .console-chart-listMessageComparedAgainst ul li.compareLine:nth-of-type(odd) {
  background-color: #537288;
}

.console-chart-listMessageComparedAgainst h3{
  margin: 0;
  padding: 5px 5px 5px 5px;
  color: aliceblue;
  text-shadow: black 1px 1px 1px;
  border-bottom: 1px solid #9e9e9e;
  margin-bottom: 5px;
}

.ConsoleMessagesLineDetails .slider {
  appearance: none;
  height: 15px;
  background: #d3d3d3;
  outline: none;
  opacity: 0.7;
  transition: opacity .2s;
  vertical-align: bottom;
}

.ConsoleMessagesLineDetails .slider:hover {
  opacity: 1;
}

.ConsoleMessagesLineDetails .slider::-webkit-slider-thumb {
  appearance: none;
  width: 15px;
  height: 15px;
  background: #4CAF50;
  cursor: pointer;
}

.ConsoleMessagesLineDetails .slider::-moz-range-thumb {
  width: 15px;
  height: 15px;
  background: #4CAF50;
  cursor: pointer;
}

.ConsoleMessages ul li div.time{
  flex: 0 0 100px;
  font-size:0.85em;
}

.ConsoleMessages ul li div.action{
  flex: 0 0 160px;
}
.ConsoleMessages ul li div.performance{
  flex: 0 0 85px;
}
.ConsoleMessages ul li div.action.Fetch{
  color:rgba(247, 77, 255);
}
.ConsoleMessages ul li div.action.Use{
  color:rgb(67, 233, 130);
}
.ConsoleMessages ul li div.action.Save{
  color:rgb(55, 160, 255);
}
.ConsoleMessages ul li div.source{
  flex: 0 0 160px;
}
.ConsoleMessages ul li div.source.MemoryCache{
  color:#45e882;
}
.ConsoleMessages ul li div.source.PersistentStorageCache{
  color:#e0ac2c;
}
.ConsoleMessages ul li div.source.HttpRequest{
  color:#ff6060;
}
.ConsoleMessages ul li div.performance span.size{
  font-size: 0.7em;
  margin-left: 3px;
  color: #b7b7b7;
}
.ConsoleMessages ul li div.idurl{
  flex:1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.ConsoleMessages ul li:nth-of-type(odd) {
  background: #4c4c4c;
}
.ConsoleMessages ul li.line-use .row{
  background-color: rgba(71, 153, 102, 0.5);
  color: #98ffee;
}

.ConsoleMessages ul li.line-error .row{
  background-color: rgba(253, 60, 0, 0.4);
  color: #ff6c6c;
  animation: backgrounderror 8s infinite;
}
@keyframes backgrounderror {
  0%   {  background-color: rgba(253, 60, 0, 0.2);}
  20%  {  background-color: rgba(253, 60, 0, 0.2);}
  25%  {  background-color: rgba(253, 60, 0, 0.8);}
  30%  {  background-color: rgba(253, 60, 0, 0.5);}
  35%  {  background-color: rgba(253, 60, 0, 0.8);}
  40%  {  background-color: rgba(253, 60, 0, 0.5);}
  55%  {  background-color: rgba(253, 60, 0, 0.8);}
  80%  {  background-color: rgba(253, 60, 0, 0.2);}
  100% {  background-color: rgba(253, 60, 0, 0.2);}
}

.ConsoleMessages .console-options{
  padding:5px;
  font-size:12px;
  transition: height 10ms ease 200ms;
}
.ConsoleMessages .console-options.console-options-open{
  height:100%;
}
.ConsoleMessages .console-options.console-options-close{
  height:0;
  padding-bottom:0;
  padding-top:0;
  transition:none;
}
.ConsoleMessages .console-options label,
.ConsoleMessages .console-options span.unit{
  color:#ffe0fd;
}
.ConsoleMessages .console-options label,
.ConsoleMessages .console-options select,
.ConsoleMessages .console-options input{
  margin-right:5px;
  display: inline-block;
}
.ConsoleMessages .console-options label{
  width:130px;
}
.ConsoleMessages .console-options select{
  width:75px;
}
.ConsoleMessages .console-options input.numericInput{
  width:50px;
}
.ConsoleMessages .console-options span.unit{
  margin-left:2px;
}
.ConsoleMessages .console-options>div{
  height:24px;
}
.Summary{
  display:flex;
  background-color: #3e3e3e;
  color:#ffe0fd;
}
.Summary .summary-box,
.Summary .summary-box-dual{
  flex: 0 0 150px;
  margin:auto;
}

.Summary .summary-box .summary-box-label{
  font-size:16px;
  min-height:38px;
}

.Summary .summary-box .summary-box-value{
  font-size:48px;
  text-shadow: #4b0d5f -1px 1px 5px, #e15df9 1px 1px 3px;
  min-height:58px;
}

.Summary .summary-box-dual{
  display: flex;
  flex-direction: column;
}

.Summary .summary-box-dual-row{
  flex: 1;
  flex-direction: row;
  display: flex;
  margin-top: 5px;
  margin-bottom: 5px;
}

.Summary .summary-box-dual .summary-box-label{
  font-size:14px;
  min-height:19px;
  flex: 0 0 125px;
  padding-top: 5px;
}

.Summary .summary-box-dual .summary-box-value{
  font-size:32px;
  text-shadow: #4b0d5f -1px 1px 5px, #e15df9 1px 1px 3px;
  flex: 0 0 25px;
  line-height: 25px;
  padding-top: 8px;
}

.ActionsPanel{
  display:flex;
}
.actionInput input,
button{
  cursor: pointer;
}
.actionInput{
  border: 1px solid #778387;
  line-height: 40px;
  cursor: default;
}
button,
.actionInput{
  background-color: #778488;
  border-color: #404040;
  color: #ffe0fd;
  font-size: 14px;
  text-shadow: #6b1f7d 1px 1px 1px;
  width: 200px;
  margin: 3px;
}

button:hover{
  background-color: #94a5aa;
}

button:active {
  background: rgb(180, 246, 255);
}

.demo-mode{
  filter: blur(2px);
}

